k8s/infra/k8s-prod/ingress-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.4
          args:
            - --api=true
            - --api.dashboard=true

            - --accesslog

            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443

            - --certificatesresolvers.ticketresolver.acme.httpchallenge.entrypoint=http

            - --providers.kubernetescrd
---
#
# Service to service communication endpoint
#
apiVersion: v1
kind: Service
metadata:
  name: traefik-srv
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
#
# Cluster gateway
#
apiVersion: v1
kind: Service
metadata:
  name: traefik-lb-srv
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
#
# Router configs
#
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: client-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`)
      kind: Rule
      services:
        - name: client-srv
          port: 3000
  tls:
    certResolver: ticketresolver
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: client-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`)
      kind: Rule
      #
      # TODO: Route the requests TO the client to HTTPS if they're done by a client from HTTP
      # I think this is not necessary as when the client makes a request to Traefik via its ClusterIP
      # it will communicate via HTTP, so I think we can activate all communications to the client from the outside world
      # to use HTTPS, as the client will always communicate with Traefik via its HTTP ClusterIP endpoint
      #
      # middlewares:
      #   - name: client-ingress-route-redirect-https
      services:
        - name: client-srv
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/auth`)
      kind: Rule
      middlewares:
        - name: strip-auth-prefix
      services:
        - name: auth-srv
          port: 3000
  tls:
    certResolver: ticketresolver
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/auth`)
      kind: Rule
      middlewares:
        - name: strip-auth-prefix
      services:
        - name: auth-srv
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ticket-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/tickets`)
      kind: Rule
      middlewares:
        - name: strip-ticket-prefix
      services:
        - name: ticket-srv
          port: 3000
  tls:
    certResolver: ticketresolver
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ticket-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/tickets`)
      kind: Rule
      middlewares:
        - name: strip-ticket-prefix
      services:
        - name: ticket-srv
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: order-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/orders`)
      kind: Rule
      middlewares:
        - name: strip-order-prefix
      services:
        - name: order-srv
          port: 3000
  tls:
    certResolver: ticketresolver
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: order-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/orders`)
      kind: Rule
      middlewares:
        - name: strip-order-prefix
      services:
        - name: order-srv
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: payments-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/payments`)
      kind: Rule
      middlewares:
        - name: strip-payments-prefix
      services:
        - name: payments-srv
          port: 3000
  tls:
    certResolver: ticketresolver
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: payments-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/payments`)
      kind: Rule
      middlewares:
        - name: strip-payments-prefix
      services:
        - name: payments-srv
          port: 3000
---
#
# TODO: Secure the dashboard access
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      # Lower the priority of this router in order to allow priority to our api routes
      priority: 40
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: ticketresolver
    domains:
      - main: www.ticketing-test-prod-app.xyz
#
# Middlewares
#
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-auth-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-ticket-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/tickets
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-order-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/orders
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-payments-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/payments
